UtahLiveDataTest/src/objects/ProgramFundingAccount__c.object
<CustomObject>
    <description>[Business] Junction object between Funding Account and Program</description>
    <fields>
        <fullName>FundingAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Account</label>
        <referenceTo>FundingAccount__c</referenceTo>
        <relationshipLabel>Program Funding Accounts</relationshipLabel>
        <relationshipName>Program_Funding_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FundingSource__c</fullName>
        <formula>HYPERLINK(&apos;/apex/FundingSourceView?id=&apos;+  FundingAccount__r.FundingSource__c  ,   FundingAccount__r.FundingSource__r.Name   , &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HideProgramEdit__c</fullName>
        <formula>NOT(ISPICKVAL(Program__r.Status__c,&apos;Created&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Program Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LatestActiveAward__c</fullName>
        <description>This field holds ID for latest award for funding account -&gt; funding source-&gt;grant</description>
        <formula>FundingAccount__r.FundingSource__r.Grant__r.LatestAwardId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Active Award</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Program Funding Accounts</relationshipLabel>
        <relationshipName>Program_Funding_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Program Funding Account</label>
    <nameField>
        <displayFormat>PFA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Funding Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>